--- a/index.html
+++ b/index.html
@@ -4,11 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfollio</title>
+   
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <section class="top-banner">
+       <div class="half-width">
     <h1>
-        This is my first Website..
+        Welcome to <br> <span id="name">Shuvo's</span> World
+        
     </h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>
+        You might saw me jumping, climbing buildings, and stopping trains.
+        But nobody pays me a dime for that work.
+        That's why I am learning and mastering web development.
+        I will not stop until I become the Web Development Hero.
+    </p>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/ashik.xuvo.0">HIRE ME</a>
+
+       </div>
+       <div class="half-width-img">
+    <img src="images/shuvo1.png" alt="Shuvo..">
+       </div> 
+   </section>
+
+   <section class="half-width">
+        <img id="My-image" src="images/shuvo1.png" alt="Shuvo2">
+   </section>
+   <section class="dream-banner">
+    <div class="half-width">
+        <h2>Dream Big</h2>
+        <h3>Become a web developer</h3>
+        <p>I already learned the basic HTML and CSS.
+            I can build any simple website. I can even teach my grandma how to make simple website.
+            My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/ashik.xuvo.0">DOWNLOAD RESUME</a>
+    </div>
+
+    <div class="experience-area">
+   <h2 style="padding-left: 50px;">Experience</h2>
+   <div class="half-width">
+       <h2>Full Stack Web Developer</h2>
+       <h3 class="orange-colur">2021-Present | Pro Level Developer</h3>
+       <p>
+        I am the master of HTML, CSS and Javascript.
+        I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS.
+        I even know the deployment, server and security.
+        I will give you 100% web solution.
+       </p>
+   </div>
+   <div class="half-width">
+       <h2>Baby Web Developer</h2>
+       <h3 class="orange-colur">2020-2021 | Programming Hero Learner</h3>
+       <p>
+        They didn't offer me a job.
+        But I made myself as a remove web developer.
+        I made their website and showed it to them. They liked it.
+        And uploaded the content.
+        It was fun working at Programming Hero.
+       </p>
+   </div>
+    </div>
+<footer>This Website is made with Love..</footer>
+   </section>
+
 </body>
-</html>
+</html> 
