--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    </section>
 
    <section class="half-width">
-        <img id="My-image" src="images/shuvo1.png" alt="Shuvo2">
+        <img id="My-image" src="images/shuvo3.png" alt="Shuvo2">
    </section>
    <section class="dream-banner">
     <div class="half-width">
@@ -43,12 +43,13 @@
             My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/ashik.xuvo.0">DOWNLOAD RESUME</a>
     </div>
+   </section>
 
-    <div class="experience-area">
+    <section class="experience-area">
    <h2 style="padding-left: 50px;">Experience</h2>
-   <div class="half-width">
+   <div id="full-stack" class="half-width single-expreience">
        <h2>Full Stack Web Developer</h2>
-       <h3 class="orange-colur">2021-Present | Pro Level Developer</h3>
+       <h3 class="orange-colur">2023-Future | Pro Level Developer</h3>
        <p>
         I am the master of HTML, CSS and Javascript.
         I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS.
@@ -56,9 +57,9 @@
         I will give you 100% web solution.
        </p>
    </div>
-   <div class="half-width">
+   <div  class="half-width single-expreience" id="baby-web">
        <h2>Baby Web Developer</h2>
-       <h3 class="orange-colur">2020-2021 | Programming Hero Learner</h3>
+       <h3 class="orange-colur">2022-2023 | Programming Hero Learner</h3>
        <p>
         They didn't offer me a job.
         But I made myself as a remove web developer.
@@ -67,9 +68,9 @@
         It was fun working at Programming Hero.
        </p>
    </div>
-    </div>
-<footer>This Website is made with Love..</footer>
-   </section>
+    </section>
+<footer><p>© Ashikur Rahman Shuvo 2022, a Programming Hero initiative.</p>.</footer>
+   
 
 </body>
 </html> 
